# datagraph

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
datagraph/: __init__.py  config.py  exceptions.py  executor.py  flow.py  flow_execution_plan.py  io.py  lock.py  processor.py  serialization.py  supervisor.py  task.py  topology.py
datagraph/executor/: __init__.py  base.py  celery.py  local.py
datagraph/redis/: anyio.py
tests/: conftest.py  test_di.py  test_example.py  test_execution_plan.py  test_executor.py  test_resolve.py  test_supervisor.py
tests/integration/: __init__.py  conftest.py  processors.py  tasks.py  test_executors.py
