[tool.poetry]
name = "datagraph"
version = "0.1.0"
description = "An asynchronous task framework based on dataflow computing principles"
authors = ["Elias Gabriel <oss@eliasfgabriel.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
anyio = "^4.8.0"
asyncstdlib = "^3.13.0"
fast-depends = "^2.4.12"
networkx = "^3.4.2"
pydantic-settings = "^2.8.1"
redis = {extras = ["hiredis"], version = "^5.2.1"}
trio-asyncio = "^0.15.0"
zstandard = "^0.23.0"

[tool.poetry.group.dev.dependencies]
anyio = {extras = ["trio"], version = "^4.8.0"}
fakeredis = {extras = ["lua"], version = "^2.27.0"}
pytest = "^8.3.5"
pytest-asyncio = "^0.25.3"
uvloop = "^0.21.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"

[tool.pytest.ini_options]
addopts = "-ra -vv -p no:asyncio"
testpaths = [ "tests" ]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
