[tool.poetry]
name = "datagraph"
version = "0.1.0"
description = "An asynchronous data processing library based on dataflows."
authors = ["Elias Gabriel <oss@eliasfgabriel.com>"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AnyIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = ">=3.11,<4"
anyio = "^4.5.0"
asyncstdlib = "^3.13.0"
fast-depends = "^2.4.12"
networkx = "^3.4.2"
pydantic-settings = "^2.8.1"
redis = {extras = ["hiredis"], git = "https://github.com/thearchitector/redis-py.git"}
zstandard = "^0.23.0"

[tool.poetry.group.dev.dependencies]
anyio = {extras = ["trio"], version = "^4.5.0"}
celery = "^5.4.0"
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
uvloop = "^0.21.0"

[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"

[tool.pytest.ini_options]
addopts = "-ra -vv --cov=datagraph --cov-report=html --cov-report=term --cov-branch"
testpaths = [ "tests" ]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
