[project]
name = "datagraph"
version = "0.1.0"
description = "An asynchronous data processing library based on dataflows."
authors = [
    {name = "Elias Gabriel", email = "oss@eliasfgabriel.com"},
]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AnyIO",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
requires-python = "<4,>=3.11"
dependencies = [
    "anyio<5.0.0,>=4.5.0",
    "asyncstdlib<4.0.0,>=3.13.0",
    "fast-depends<3.0.0,>=2.4.12",
    "networkx<4.0.0,>=3.4.2",
    "pydantic-settings<3.0.0,>=2.8.1",
    "zstandard<1.0.0,>=0.23.0",
    "valkey-glide>=2.0.1",
    "anyio-atexit>=1.0.0",
]

[dependency-groups]
dev = [
    "anyio[trio]<5.0.0,>=4.5.0",
    "celery<6.0.0,>=5.4.0",
    "pytest<9.0.0,>=8.3.5",
    "pytest-cov<7.0.0,>=6.0.0",
    "uvloop<1.0.0,>=0.21.0",
    "asyncio-atexit>=1.0.1",
]
lint = [
    "mypy<2.0.0,>=1.15.0",
    "types-networkx<4.0.0.0,>=3.4.2.20250319",
    "celery-types<1.0.0,>=0.23.0",
]

[tool.poetry.group.lint.dependencies]
mypy = "^1.15.0"
types-networkx = "^3.4.2.20250319"
celery-types = "^0.23.0"

[tool.pytest.ini_options]
addopts = "-ra -vv --cov=datagraph --cov-report=html --cov-report=term --cov-branch"
testpaths = [ "tests" ]

[tool.mypy]
strict = true

[tool.ruff.lint]
extend-select = ["B", "I", "ASYNC"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
